--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,6 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn clean
       - run: yarn build
-      # - run: yarn lint
       - run: yarn pa11y
       - run: yarn html-proofer
+      - run: yarn lint
