--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,7 +19,7 @@ jobs:
       - run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
 
-          # echo custom.domain.example.org > public/CNAME
+          # echo CHANGEME.example.org > public/CNAME
 
           yarn deploy
         env:
