--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,11 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
+
+      - name: Check all template data was replaced
+        if: ${{ github.repository != 'teamdigitale/gatsby-site' }}
+        run: grep CHANGE[M]E -r . && (echo "Replace all occurrences with values relevant to this site"; exit 1)
+
       - run: yarn install --frozen-lockfile
       - run: yarn clean
       - run: yarn build
