--- a/contents/labels.yml
+++ b/contents/labels.yml
@@ -1,5 +1,5 @@
-headerTitle: Identità Digitale
-headerSubtitle: Accedi ai servizi online
+headerTitle: CHANGEME Header title
+headerSubtitle: CHANGEME Header subtitle
 showMore: Scopri di più
 showSPID: Scopri SPID
 showCIE: Scopri CIE
