chore: generalize the site some more (2)

--- a/contents/links.yml
+++ b/contents/links.yml
@@ -1,6 +1,6 @@
 internalLinks:
   strategy:
-    linkTo: "/#identitadigitale"
+    linkTo: "/#strategy"
     label: CHANGEME Menu 1
     linkTop: "/#mainTop"
   enablement:
