--- a/contents/seo.yml
+++ b/contents/seo.yml
@@ -3,7 +3,7 @@ homePage:
   description: CHANGEME Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa
 privacyPage:
   title: Informativa privacy - CHANGEME Site name
-  description: Informativa sulla gestione dei cookie del sito Identità Digitale
+  description: Informativa sulla gestione dei cookie del CHANGEME Site name
 noteLegaliPage:
   title: Note legali - CHANGEME Site name
   description: Informativa sulle note legali del sito CHANGEME
