chore(deps): bump dependencies and use Gatsby 5

--- a/package.json
+++ b/package.json
@@ -16,33 +16,33 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "@fontsource/lora": "^4.2.2",
-    "@fontsource/titillium-web": "^4.2.2",
-    "bootstrap-italia": "^1.4.3",
-    "classnames": "^2.3.1",
-    "design-react-kit": "^4",
-    "gatsby": "^3.2.1",
-    "gatsby-plugin-image": "^1.2.1",
-    "gatsby-plugin-matomo": "0.10.0",
-    "luxon": "^1.28.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "@fontsource/lora": "^4.5.13",
+    "@fontsource/titillium-web": "^4.5.9",
+    "bootstrap-italia": "^1",
+    "classnames": "^2.3.2",
+    "design-react-kit": "^4.0.2",
+    "gatsby": "^5",
+    "gatsby-plugin-image": "^3.7.0",
+    "gatsby-plugin-matomo": "^0.14.0",
+    "luxon": "^3.3.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-jss": "^10.6.0",
-    "swiper": "^6.5.6"
+    "react-jss": "^10.10.0",
+    "swiper": "^9.1.0"
   },
   "devDependencies": {
-    "eslint": "^7.24.0",
-    "eslint-config-italia": "^1.0.3",
-    "gatsby-plugin-jss": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^4.2.0",
-    "gatsby-plugin-sharp": "^3.2.1",
-    "gatsby-plugin-sitemap": "^3.2.0",
-    "gatsby-remark-images": "^5.1.0",
-    "gatsby-source-filesystem": "^3.2.0",
-    "gatsby-transformer-remark": "^3.2.0",
-    "gatsby-transformer-sharp": "^3.2.0",
-    "gh-pages": "^3.1.0",
+    "eslint": "^7",
+    "eslint-config-italia": "^1.0.4",
+    "gatsby-plugin-jss": "^5",
+    "gatsby-plugin-react-helmet": "^6",
+    "gatsby-plugin-sharp": "^5",
+    "gatsby-plugin-sitemap": "^6",
+    "gatsby-remark-images": "^7",
+    "gatsby-source-filesystem": "^5",
+    "gatsby-transformer-remark": "^6",
+    "gatsby-transformer-sharp": "^5",
+    "gh-pages": "^5.0.0",
     "pa11y-ci": "^3.0.1",
     "remark-attr": "^0.11.1"
   }
